--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
-[[redirects]]
-    from = "/*"
-    to = "pages/index.tsx"
-    status = 200
+[build]
+  command = "yarn run build"
+  publish = ".next"
