--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
 [build]
   command = "yarn run build"
+  functions = "functions"
   publish = ".next"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
